sort.baseball.NaiveBaseball.scala.error
Erreur de compilation :
NaiveBaseball:7: error: not enough arguments for method estBaseTriee: (x$1: Int)Boolean.
Unspecified value parameter x$1.
  }while(!estBaseTriee())
                      ^